# advent-of-code-2024

./: Cargo.toml  README.md
data/examples/: 16-2.txt  18-2.txt  19-2.txt  20-2.txt  21-2.txt  23-2.txt  24-2.txt  25-2.txt
src/template/: mod.rs  runner.rs
src/template/commands/: scaffold.rs
