[package]
name = "advent_of_code"
version = "0.9.3"
authors = [
    "Nick Davies <github@nicolasdavies.com.au>",
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"
]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
aoc-lib = { git = "https://github.com/nickdavies/aoc-lib.git" }
pico-args = "0.5.0"
anyhow = "1.0.75"
maplit = "1.0.2"
itertools = "0.12.0"
nom = "7.1.3"
petgraph = "0.6.4"
num-bigint = "0.4.4"
num-traits = "0.2.17"
