[package]
name = "advent_of_code"
version = "0.9.3"
authors = [
    "Nick Davies <github@nicolasdavies.com.au>",
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"
]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
maplit = "1.0.2"
nom = "7.1.3"
pico-args = "0.5.0"
thiserror = "2.0.3"
